--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,31 @@
   padding: 0;
   box-sizing: border-box;
 }
-.container {
-  text-align: center;
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 200px;
-}
-.top ,.down {
-  background-color: aliceblue;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  text-align: center;
+main {
+  display: flex;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
+
+.container {
+  width: 50%;
+  height: 50%;
+
+}
+
+.container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.fa-solid {
+  border-radius: 50%;
+  background-color: aliceblue;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 25px;
+  cursor: pointer;
+}
+
